# ApiPok-Real

./: README.md  app.py  dataManagment(extra).py  pyproject.toml
templates/: lobby_design.html
